--- a/nuxt/.editorconfig
+++ b/nuxt/.editorconfig
@@ -1,7 +1,7 @@
 # editorconfig.org
 root = true
 
-[*.{ts,js,json,prisma}]
+[*.{vue,ts,js,json,prisma}]
 indent_size = 2
 tab_width = 2
 indent_style = space
