--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev --host",
+    "dev": "nuxt dev --host 192.168.0.6",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
@@ -13,18 +13,18 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.2",
+    "@eslint/js": "^9.10.0",
     "@nuxt/eslint": "^0.5.0",
     "@prisma/nuxt": "^0.0.35",
-    "@quasar/extras": "^1.16.12",
     "@sidebase/nuxt-auth": "^0.8.2",
+    "eslint-plugin-vue": "^9.28.0",
     "next-auth": "^4.21.1",
     "nuxt": "^3.12.4",
-    "nuxt-quasar-ui": "^2.1.4",
-    "quasar": "^2.16.9",
-    "vue": "latest"
+    "vue": "latest",
+    "vuetify-nuxt-module": "^0.18.3"
   },
   "devDependencies": {
     "@prisma/client": "^5.19.1",
-    "prisma": "^5.18.0"
+    "prisma": "^5.19.1"
   }
 }
