--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-vue": "^9.28.0",
     "next-auth": "^4.21.1",
     "nuxt": "^3.12.4",
+    "uuid": "^10.0.0",
     "vue": "latest",
     "vuetify-nuxt-module": "^0.18.3"
   },
