--- a/nuxt/tsconfig.json
+++ b/nuxt/tsconfig.json
@@ -7,7 +7,7 @@
     "esModuleInterop": true,
     "moduleResolution": "node",
     "paths": {
-      "*": ["node_modules/*"]
+      "*": ["./node_modules/*"]
     }
   }
 }
