--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@prisma/client": "^5.19.1",
-    "prisma": "^5.19.1"
+    "prisma": "^5.19.1",
+    "sass": "^1.79.1"
   }
 }
