--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -17,6 +17,7 @@
     "@nuxt/eslint": "^0.5.0",
     "@prisma/nuxt": "^0.0.35",
     "@sidebase/nuxt-auth": "^0.8.2",
+    "@types/uuid": "^10.0.0",
     "eslint-plugin-vue": "^9.28.0",
     "next-auth": "^4.21.1",
     "nuxt": "^3.12.4",
