--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -18,9 +18,14 @@
     "@prisma/nuxt": "^0.0.35",
     "@sidebase/nuxt-auth": "^0.8.2",
     "@types/uuid": "^10.0.0",
+    "engine.io": "^6.6.1",
+    "eslint-config-standard": "^17.1.0",
     "eslint-plugin-vue": "^9.28.0",
     "next-auth": "^4.21.1",
     "nuxt": "^3.12.4",
+    "nuxt-socket-io": "^3.0.13",
+    "socket.io": "^4.8.0",
+    "socket.io-client": "^4.8.0",
     "uuid": "^10.0.0",
     "vue": "latest",
     "vuetify-nuxt-module": "^0.18.3"
