--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -30,10 +30,11 @@
     "socket.io-client": "^4.8.0",
     "uuid": "^10.0.0",
     "vue": "latest",
-    "vuetify-nuxt-module": "^0.18.3"
+    "vuetify-nuxt-module": "^0.18.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@prisma/client": "^5.21.0",
+    "@prisma/client": "^5.21.1",
     "prisma": "^5.19.1",
     "sass": "^1.79.1"
   }
