--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -24,18 +24,19 @@
     "eslint-plugin-vue": "^9.28.0",
     "ioredis": "^5.4.1",
     "next-auth": "^4.21.1",
-    "nuxt": "^3.12.4",
+    "nuxt": "^3.14.1592",
     "nuxt-socket-io": "^3.0.13",
     "socket.io": "^4.8.0",
     "socket.io-client": "^4.8.0",
     "uuid": "^10.0.0",
+    "v-phone-input": "^4.4.0",
     "vue": "latest",
     "vuedraggable": "^4.1.0",
     "vuetify-nuxt-module": "^0.18.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@prisma/client": "^5.21.1",
+    "@prisma/client": "^5.22.0",
     "prisma": "^5.19.1",
     "sass": "^1.79.1"
   }
